src/components/Promo/Promo.css
.promo {
  background-color: #073042;
  width: 100%;
}

.promo__content {
  display: flex;
  flex-direction: row;
  align-items: flex-start;
  justify-content: space-between;
  padding-top: 75px;
  padding-bottom: 75px;
}

.promo__column {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
}

.promo__title {
  max-width: 600px;
  margin: 0;
  font-size: 50px;
  font-weight: 400;
  line-height: 1.16;
  -webkit-text-stroke: 1px #000;
  text-shadow: 0 4px 4px #0000003f;
}

.promo__info {
  max-width: 310px;
  margin: 38px 0 0;
  font-size: 13px;
  font-weight: 400;
  line-height: 1.23;
  opacity: 0.5;
  mix-blend-mode: normal;
}

.promo__link {
  box-sizing: border-box;
  margin-top: 147px;
  padding: 9px 20px;
  text-decoration: none;
  font-weight: 500;
  font-size: 12px;
  line-height: 1.33;
  color: #fff;
  border: 1px solid #ffffff99;
  border-radius: 3px;
  transition: opacity 250ms ease-in-out;
}

.promo__link:hover {
  opacity: 0.7;
}

@media screen and (max-width: 1279px) {
  .promo__content {
    flex-direction: column-reverse;
    align-items: center;
    padding-top: 140px;
  }
  .promo__column {
    align-items: center;
  }
  .promo__title {
    max-width: 100%;
    font-size: 40px;
    line-height: 1.25;
    text-align: center;
    -webkit-text-stroke: initial;
    text-shadow: initial;
    margin-top: 50px;
  }
  .promo__info {
    max-width: 260px;
    text-align: center;
    margin-top: 20px;
  }
  .promo__link {
    margin-top: 92px;
  }
}

@media screen and (max-width: 767px) {
  .promo__content {
    padding-top: 70px;
    padding-bottom: 30px;
  }
  .promo__title {
    font-size: 30px;
    line-height: 1.27;
    letter-spacing: -0.04em;
    margin-top: 45px;
  }
  .promo__info {
    margin-top: 25px;
  }
  .promo__link {
    margin-top: 80px;
  }
  .promo__logo {
    width: 210px;
    height: 206px;
  }
}

